--- a/.gitignore
+++ b/.gitignore
@@ -238,3 +238,333 @@
 /build
 /build
 /build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
+/build
