--- a/.classpath
+++ b/.classpath
@@ -183,5 +183,21 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/hibernate-commons-annotations-4.0.4.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/hibernate-core-4.3.5.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/hibernate-entitymanager-4.3.5.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/hibernate-envers-4.3.5.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/hibernate-jpamodelgen-4.3.5.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/hibernate-osgi-4.3.5.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/jandex-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/jboss-logging-3.1.3.GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/jboss-logging-annotations-1.2.0.Beta1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/mysql-connector-java-5.0.8-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/org.osgi.compendium-4.3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stevin/workspace/MAGS/WebContent/WEB-INF/lib/org.osgi.core-4.3.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
