--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,8 +2,8 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>MAGS</display-name>
   <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
     <welcome-file>DataCus.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
@@ -11,7 +11,7 @@
   </welcome-file-list>
   <servlet>
     <servlet-name>saveData</servlet-name>
-    <servlet-class>servlets.SaveDataServlet</servlet-class>
+    <servlet-class>com.software.ysf.servlets.SaveDataServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>saveData</servlet-name>
@@ -19,34 +19,168 @@
   </servlet-mapping>
   <servlet>
     <servlet-name>getClass</servlet-name>
-    <servlet-class>servlets.GetClassServlet</servlet-class>
+    <servlet-class>com.software.ysf.servlets.GetClassServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>getClass</servlet-name>
     <url-pattern>/getClass</url-pattern>
   </servlet-mapping>
   <servlet>
+    <servlet-name>addRDFClass</servlet-name>
+    <servlet-class>com.software.ysf.servlets.AddRDFClassServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>addRDFClass</servlet-name>
+    <url-pattern>/addRDFClass</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>saveRDFClass</servlet-name>
+    <servlet-class>com.software.ysf.servlets.SaveRDFClassServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>saveRDFClass</servlet-name>
+    <url-pattern>/saveRDFClass</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>deleteRDFClass</servlet-name>
+    <servlet-class>com.software.ysf.servlets.DeleteRDFClassServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>deleteRDFClass</servlet-name>
+    <url-pattern>/deleteRDFClass</url-pattern>
+  </servlet-mapping>
+  <servlet>
     <servlet-name>getObjectProperty</servlet-name>
-    <servlet-class>servlets.GetObjectPropertyServlet</servlet-class>
+    <servlet-class>com.software.ysf.servlets.GetObjectPropertyServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>getObjectProperty</servlet-name>
     <url-pattern>/getObjectProperty</url-pattern>
   </servlet-mapping>
   <servlet>
+    <servlet-name>addObjectPro</servlet-name>
+    <servlet-class>com.software.ysf.servlets.AddObjectProServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>addObjectPro</servlet-name>
+    <url-pattern>/addObjectPro</url-pattern>
+  </servlet-mapping>
+  
+   <servlet>
+    <servlet-name>saveObjectPro</servlet-name>
+    <servlet-class>com.software.ysf.servlets.SaveObjectProServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>saveObjectPro</servlet-name>
+    <url-pattern>/saveObjectPro</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>deleteObjectPro</servlet-name>
+    <servlet-class>com.software.ysf.servlets.DeleteObjectProServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>deleteObjectPro</servlet-name>
+    <url-pattern>/deleteObjectPro</url-pattern>
+  </servlet-mapping>
+  <servlet>
     <servlet-name>getDataTypeProperty</servlet-name>
-    <servlet-class>servlets.GetDataTypePropertyServlet</servlet-class>
+    <servlet-class>com.software.ysf.servlets.GetDataTypePropertyServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>getDataTypeProperty</servlet-name>
     <url-pattern>/getDataTypeProperty</url-pattern>
   </servlet-mapping>
   <servlet>
+    <servlet-name>addDatatypePro</servlet-name>
+    <servlet-class>com.software.ysf.servlets.AddDatatypeProServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>addDatatypePro</servlet-name>
+    <url-pattern>/addDatatypePro</url-pattern>
+  </servlet-mapping>
+  
+    <servlet>
+    <servlet-name>saveDatatypePro</servlet-name>
+    <servlet-class>com.software.ysf.servlets.SaveDatatypeProServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>saveDatatypePro</servlet-name>
+    <url-pattern>/saveDatatypePro</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>deleteDatatypePro</servlet-name>
+    <servlet-class>com.software.ysf.servlets.DeleteDatatypeProServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>deleteDatatypePro</servlet-name>
+    <url-pattern>/deleteDatatypePro</url-pattern>
+  </servlet-mapping>
+  <servlet>
     <servlet-name>storeModel</servlet-name>
-    <servlet-class>servlets.StoreModelServlet</servlet-class>
+    <servlet-class>com.software.ysf.servlets.StoreModelServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>storeModel</servlet-name>
     <url-pattern>/storeModel</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>getObjDomain</servlet-name>
+    <servlet-class>com.software.ysf.servlets.GetObjDomainServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>getObjDomain</servlet-name>
+    <url-pattern>/getObjDomain</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>getObjRange</servlet-name>
+    <servlet-class>com.software.ysf.servlets.GetObjRangeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>getObjRange</servlet-name>
+    <url-pattern>/getObjRange</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>getDtDomain</servlet-name>
+    <servlet-class>com.software.ysf.servlets.GetDtDomainServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>getDtDomain</servlet-name>
+    <url-pattern>/getDtDomain</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>getDtRange</servlet-name>
+    <servlet-class>com.software.ysf.servlets.GetDtRangeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>getDtRange</servlet-name>
+    <url-pattern>/getDtRange</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>login</servlet-name>
+    <servlet-class>com.software.ysf.servlets.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>login</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>signOut</servlet-name>
+    <servlet-class>com.software.ysf.servlets.SignOutServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>signOut</servlet-name>
+    <url-pattern>/signOut</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>signUp</servlet-name>
+    <servlet-class>com.software.ysf.servlets.SignUpServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>signUp</servlet-name>
+    <url-pattern>/signUp</url-pattern>
   </servlet-mapping>
 </web-app>
